// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package intrinsic_proto.skills;

import "intrinsic/math/proto/pose.proto";
import "intrinsic/world/proto/entity_search.proto";

message CartesianMotionTarget {
  // The frame on the tool that you want to move to align with frame and offset.
  intrinsic_proto.world.EntitySearchCriteria tool = 1;

  // The tool target frame. If an offset with respect to this frame is
  // specified, the tool target is the frame plus the applied offset.
  intrinsic_proto.world.EntitySearchCriteria frame = 2;
  // Optional, you can place an offset between frame
  // and tool.
  intrinsic_proto.Pose offset = 3;
}
